--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "jquery": "^3.5.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-background-animation": "^1.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-typing-animation": "^1.6.2",
     "schema-utils": "^3.0.0",
     "web-vitals": "^0.2.4"
   },
