--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-typed": "^1.2.0",
     "react-typing-animation": "^1.6.2",
+    "react-typist": "^2.0.5",
     "schema-utils": "^3.0.0",
     "web-vitals": "^0.2.4"
   },
